fix timezone select on mobile to big

--- a/static/css/partials/_base.scss
+++ b/static/css/partials/_base.scss
@@ -80,6 +80,7 @@ hr {
     td>.button {
         margin-bottom: 0.75rem;
     }
+
 }
 
 .switch[type="checkbox"]+label::after,
@@ -89,4 +90,12 @@ hr {
 
 .switch[type="checkbox"]:checked+label::after {
     left: calc(1.25rem + 1.25rem / 2 - 2 * #{$switch-paddle-offset});
+}
+
+select {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
